--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
+    <script src="script.js"></script>
   </head>
-  <body>
+  <body style="background-color: khaki">
     <div>
-      <h2>Sample Web</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic a placeat
-        suscipit. Repudiandae
-        <span>Span text </span>
+      <h1 style="color: rgb(194, 32, 32); background-color: yellow">mani</h1>
+
+      <p style="background-color: yellow">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum deserunt,
+        nemo eum praesentium exercitationem et quis quas officiis, sint tempore
+        a totam? Reprehenderit, error laborum. Animi deleniti excepturi corrupti
+        suscipit.
       </p>
+      <div>This is dev</div>
+      <p>this is p tag</p>
+      <span>this is span</span>
+      <div>
+        <h4>Login</h4>
+        <div>
+          <input type="email" name="email" id="email" />
+        </div>
+        <div>
+          <input type="password" name="password" id="password" />
+        </div>
+        <input type="submit" value="Login" onclick="submit()" />
+      </div>
     </div>
   </body>
 </html>
