--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </div>
         <input type="submit" value="Login" onclick="submit()" />
       </div>
+      <div><a href="index1.html">Link to index1 </a></div>
     </div>
   </body>
 </html>
