--- a/index1.html
+++ b/index1.html
@@ -13,6 +13,11 @@
         suscipit. Repudiandae
         <span>Span text </span>
       </p>
+      <div>
+        <p>
+          <span><a href="index.html">Link to index</a></span>
+        </p>
+      </div>
     </div>
   </body>
 </html>
